--- a/lesson2/css/formato1.css
+++ b/lesson2/css/formato1.css
@@ -8,7 +8,7 @@ body {
 /* phone or baseline views **************************/
 header,
 footer {
-	background-color: #bed;
+	background-color: #00A5CF;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
@@ -27,11 +27,11 @@ h1 {
 	font-size: 2rem;
 }
 h2 {
-	color: #536878;
+	color: #004E64;
 }
 
 nav {
-	background-color: #36454f;
+	background-color: #004E64;
 	text-align: center;
 	box-shadow: 0 2px 15px gray;
 }
@@ -50,11 +50,11 @@ nav ul li a {
 	font-size: 0.95rem;
 }
 nav a:hover {
-	background-color: #bbb;
+	background-color: #7AE582;
 	color: #36454f;
 }
 .active {
-	color: yellow;
+	color: #c17767;
 }
 main {
 	display: grid;
@@ -65,7 +65,7 @@ main article {
 	margin: 0.5rem;
 	border: 1px solid #bbb;
 	padding: 0 1rem;
-	background-color: #eee;
+	background-color: #9FFFCB;
 }
 main picture {
 	display: none;
