--- a/responsiveMenu/start-navigation/css/normalize.css
+++ b/responsiveMenu/start-navigation/css/normalize.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather+Sans");
+@import url("https://fonts.googleapis.com/css?family=Electrolize");
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -24,6 +26,7 @@ html {
 
 body {
   margin: 0;
+  background-color: #f7f5fb;
 }
 
 /**
@@ -37,6 +40,7 @@ header,
 nav,
 section {
   display: block;
+  background-color: #084887;
 }
 
 /**
