--- a/weather/css/medium.css
+++ b/weather/css/medium.css
@@ -1,5 +1,7 @@
 /* 35em is also 568px when basefont is 16px */
 @media only screen and (min-width: 35em) {
-
+    .fondoText{
+        height: 500px;
+      }
     
 }/*end medium*/
