--- a/weather/css/normalize.css
+++ b/weather/css/normalize.css
@@ -525,6 +525,7 @@ h2.tituloPagina{
   text-align: center;
   font-family:"Merriweather Sans";
   color: #f9ab55;
+  padding:25px
 }
 
 footer{
@@ -538,3 +539,107 @@ nav{
   font-family:"Merriweather Sans";
 }
 /*fin pagina Preston*/
+
+/*imagen y superposicion*/
+main {max-width:800px;margin:0 auto;}
+h1 {text-align: center;font-size:2.5rem;text-shadow:3px 3px 5px #777;}
+
+.herodiv {margin: 10px auto;position: relative;}
+h1, h2, p {margin: 0;}
+
+.weatherSummary {
+	position: absolute;
+	top: 25px;
+	left: 20px;
+	background: radial-gradient(#eee, #4567aa);
+	border: 1px solid #000;
+	padding: 1.5rem;
+	box-shadow: 0 0 30px #111;
+	opacity: .8;
+}
+
+/* fin imagen y superposicion*/
+
+/* Grid */
+.grid { 
+	display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
+  border-right: 1px solid #333;
+}
+.grid-col1 {
+  font-family:"Merriweather Sans";
+  }
+.grid-col2 {
+  font-family:"Electrolize";
+  }
+/* Fin Grid */
+
+hr{
+  color:ghostwhite;
+}
+.col-head {
+	display: block;
+	padding: 5px;
+	border-bottom: 1px solid #333;
+  text-align: center;
+  font-weight: 700;
+	font-size: 1rem;
+	background-color:  #f9ab55;
+	color: white;
+}
+.data {
+	display: block;
+	padding: 0 5px 5px;
+	font-size: 0.8rem;
+  text-align: center;
+  font-family:"Electrolize";
+}
+.grid-col:hover {
+	opacity: 0.75;
+	background-color:#333;
+	color: white;
+}
+.grid-col {
+	border-bottom: 1px solid #333;
+	border-left: 1px solid #333;
+  text-align: center;
+}
+img.marco{
+  border-radius: 100px;
+  padding: 0.25rem;
+ }
+ .fondoText{
+   margin:10px auto;
+   position:relative;
+   background-color: #f9ab55;
+   border:1px solid #333;
+   width:100%;
+   height:400px;
+   padding: 20px;
+   box-shadow: 0 0 30px #111;
+ }
+ .articulo{
+    position:absolute;
+    padding:20px; 
+    font-family:"Merriweather Sans";
+ }
+ .imagen2{
+   float:right;
+   display:block;
+   max-width: 100%;
+   height:auto;
+   position:relative;
+ }
+ .gridfooter { 
+	display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
+  }
+
+  footer img {
+    width: 100%;
+    height: auto;
+  }
+  .banner{
+    width: 100%;
+    height: auto;
+  }
