--- a/lesson4-wednesday/css/formato.css
+++ b/lesson4-wednesday/css/formato.css
@@ -112,7 +112,7 @@ body {
   
   /* Grid */
   .grid { 
-      display: grid;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
     border-right: 1px solid #333;
   }
@@ -198,3 +198,38 @@ body {
       width: 100%;
       height: auto;
     }
+
+    .grid-images{ 
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
+      border-right: 1px solid #333;
+    }
+    
+    /*galeria de imagenes*/
+    .container {
+      margin: 1rem auto; 
+      display:grid; 
+      grid-template-columns: 1fr 1fr 1fr; 
+      max-width: 1048px;}
+
+    img { 
+      width: 250px; 
+      height: auto; 
+      margin: .5rem;
+    }
+    figcaption {
+      font-size: smaller;}
+    /* hover effect */
+    .norm:hover {box-shadow: 0 0 50px #333;}
+    /* rounded corners - boxmodel */
+    .rocorn {border-radius: 5px 150px;}
+    /* simple opacity */
+    .opac {opacity: .5;}
+    .blur {filter: blur(1px) grayscale(75%);}
+    .object {width: 100%; height: 100px ; object-fit: cover;}
+    .shape-outside {border-radius: 100px;
+                  width:35%; 
+                  margin: 0 3em .5em 0; 
+                  float:left; 
+                  shape-outside: circle();}
+    /*fin galeria de imagenes*/
