--- a/lesson4-wednesday/css/formato.css
+++ b/lesson4-wednesday/css/formato.css
@@ -210,26 +210,33 @@ body {
       margin: 1rem auto; 
       display:grid; 
       grid-template-columns: 1fr 1fr 1fr; 
-      max-width: 1048px;}
+      max-width: 1048px;
+    
+      
+    }
 
-    img { 
+    .gale img { 
       width: 250px; 
       height: auto; 
       margin: .5rem;
+      filter: blur(0em);
+      transition: filter 0.5s;
+      background-color: #fff;
+      border:1px solid #333;
     }
     figcaption {
-      font-size: smaller;}
+      font-size: smaller;
+      font-family:"Electrolize";
+      
+    }
+
     /* hover effect */
-    .norm:hover {box-shadow: 0 0 50px #333;}
-    /* rounded corners - boxmodel */
-    .rocorn {border-radius: 5px 150px;}
-    /* simple opacity */
-    .opac {opacity: .5;}
-    .blur {filter: blur(1px) grayscale(75%);}
-    .object {width: 100%; height: 100px ; object-fit: cover;}
-    .shape-outside {border-radius: 100px;
-                  width:35%; 
-                  margin: 0 3em .5em 0; 
-                  float:left; 
-                  shape-outside: circle();}
+    .norm:hover {
+      box-shadow: 0 0 50px #333;
+    }
+    
+       
+    .gale img[data-src] {
+      filter: blur(0.2em);
+    }
     /*fin galeria de imagenes*/
