--- a/lesson4-wednesday/css/large.css
+++ b/lesson4-wednesday/css/large.css
@@ -27,6 +27,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', end
         border-right: 1px solid rgba(0,0,0,0.3);
         padding: .6rem 1rem;
     }
-
+    .container{
+        grid-template-columns: 1fr 1fr 1fr; 
+    }
     
 } /*end large */
