--- a/lesson4-saturday/css/small.css
+++ b/lesson4-saturday/css/small.css
@@ -119,7 +119,13 @@ form label.top input:required:valid {
 	margin: 0 15px;
 	color: #2075ff;
 }
-
+textarea {
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+}
 /*----------- END FORM --------------*/
 
 
