--- a/lesson4-saturday/css/formato.css
+++ b/lesson4-saturday/css/formato.css
@@ -23,8 +23,7 @@ body {
    
   }
   
-  
-  
+    
   .headings {
     display: flex;
     flex-direction: column;
@@ -37,8 +36,8 @@ body {
     margin: 0 0 0 17px;
   }
   
-  .m {
-    font-style: bold;
+  .m{
+    font-style:italic;
     letter-spacing: 1pt;
     color: #f9ab55;
     margin-left: 20px;
@@ -87,6 +86,8 @@ body {
   }
   nav{
     font-family:"Merriweather Sans";
+    justify-content: center;
+    margin:0 auto;
   }
   /*fin pagina Preston*/
   
