--- a/lesson10-saturday/css/formato.css
+++ b/lesson10-saturday/css/formato.css
@@ -115,8 +115,9 @@ body {
   .grid { 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
-    
+    border-right: 1px solid #333;
   }
+  
   .grid-col1 {
     font-family:"Merriweather Sans";
     }
