--- a/lesson10-saturday/css/large.css
+++ b/lesson10-saturday/css/large.css
@@ -25,12 +25,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', end
     nav ul li a {
         border: none;
         border-right: 1px solid rgba(0,0,0,0.3);
+        border-left: 1px solid rgba(0,0,0,0.3);
         padding: .6rem 1rem;
     }
     .container{
         grid-template-columns: 1fr 1fr 1fr; 
     }
-    
+    nav{
+        display:flex;
+        font-family:"Merriweather Sans";
+        justify-content: center;
+        margin:0 auto;
+      }
 
     .cards {
         display: grid;
