--- a/lesson10-saturday/css/large.css
+++ b/lesson10-saturday/css/large.css
@@ -9,8 +9,6 @@ background: -webkit-linear-gradient(top,  #ffd65e 0%,#febf04 100%); /* Chrome10-
 background: linear-gradient(to bottom,  #ffd65e 0%,#febf04 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', endColorstr='#febf04',GradientType=0 ); /* IE6-9 */
 
-
-
     }
 
     nav button {display: none;}
@@ -38,12 +36,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', end
         margin:0 auto;
       }
 
+      div.cards section {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items:center;
+        text-align: center;
+        grid-row-gap:20px;
+        width:250px;
+    }
+   
+
     .cards {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap:10px;
         justify-items:center;
         text-align: center;
         grid-row-gap:20px;
     }
+
 } /*end large */
