--- a/lesson10-saturday/css/formato.css
+++ b/lesson10-saturday/css/formato.css
@@ -117,7 +117,7 @@ body {
   /* Grid */
   .grid-sumary { 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
+    grid-template-columns: 1fr 1fr;
     
   }
   .grid { 
