--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -53,5 +53,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', end
         text-align: center;
         grid-row-gap:20px;
     }
+   
+    .weatherSummary {
+        position: absolute;
+        top: 25px;
+        left: 100px;
+        background: radial-gradient(#eee, #4567aa);
+        border: 1px solid #000;
+        padding: 1.5rem;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+        width:30%;
+    }
 
 } /*end large */
