--- a/lesson6/css/medium.css
+++ b/lesson6/css/medium.css
@@ -13,7 +13,16 @@
         width:400px;
     }
     
-   
+    .weatherSummary {
+        position: relative;
+        left: 80px;
+        background: radial-gradient(#eee, #4567aa);   
+        padding: 1.5rem;
+        box-shadow: 0 0 30px #111;
+        opacity: .8;
+        width: 80%;
+        align-content: center;
+    }
     
     
         
