--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -154,3 +154,24 @@ textarea {
     align-content: center;
 }
 /*fin summary*/
+/*inicio caja eventos*/
+.eventbox{
+    display:grid;
+    font-size: 1.5em;
+    grid-template-columns: 1fr;
+    text-align:center;
+    border: 1px solid #445ba9;
+    border-radius: 10px;
+    box-shadow: 0 0 30px #111;
+    padding:20px;
+    padding-bottom: 40px;
+    margin: 20px;
+    font-family:"Electrolize";
+    background-color:#084887;
+    color:#eee;
+}
+/*end caja eventos*/
+.articleprincipal{
+    display:grid;
+    grid-template-columns: 1fr;
+}
