--- a/lesson6/css/formato.css
+++ b/lesson6/css/formato.css
@@ -127,10 +127,10 @@ body {
   }
   
   .grid-col1 {
-    font-family:"Merriweather Sans";
+    font-family:"roboto";
     }
   .grid-col2 {
-    font-family:"Electrolize";
+    font-family:"roboto";
     }
   /* Fin Grid */
   
