--- a/scootsSite/css/small.css
+++ b/scootsSite/css/small.css
@@ -6,7 +6,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 /*fuentes para h1, h2 , p*/
 h1 {text-align: center;font-size:2.5rem;text-shadow:3px 3px 5px #777;}
 h2 {text-align: center;font-size:1.5rem; text-shadow:3px 3px 5px #777;font-family: 'Viga', sans-serif;}
-p{font-family: 'Roboto', sans-serif;font-size:1rem;}
+p{font-family: 'Arima Madurai', cursive;}
 /*fin para h1, h2 , p*/
 
 /* inicio header section*/
@@ -32,6 +32,7 @@ header {
     font-family:'Viga', sans-serif;
     font-size:20px;
     color: #fff; 
+    background-color: #3da35d;
   }
 
   .slogan{
@@ -82,7 +83,8 @@ nav ul.hide{display:none;}
 /*section main*/
 main {max-width:950px;
     margin: auto;
-    background-color:#96e072;}
+    background-color:#96e072; padding:20px;}
+    
 
 
 /*fin main */
@@ -105,7 +107,7 @@ main {max-width:950px;
       position: absolute;
       top: 25px;
       left: 60px;
-      background: radial-gradient(#eee, #3e8914);
+      background: radial-gradient(#eee, #3da35d);
       border: 1px solid #000;
       padding: 1.5rem;
       box-shadow: 0 0 30px #111;
@@ -125,10 +127,10 @@ main {max-width:950px;
   }
 
   .grid-col1 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Arima Madurai', cursive;
     }
   .grid-col2 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Arima Madurai', cursive;
     }
   /* Fin Grid sumary */
 
@@ -158,7 +160,7 @@ main {max-width:950px;
       padding: 0 5px 5px;
       font-size: 0.8rem;
       text-align: center;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Arima Madurai', cursive;
   }
   .grid-col:hover {
       opacity: 0.75;
@@ -177,19 +179,54 @@ main {max-width:950px;
  /* fin Grid-forecast */
 
 /* Tarjetas-inicio*/
-.cards-rentals {
+div.cards-rentals {
     display:grid;
     grid-template-columns: 1fr;
     background-color: #3da35d;
     padding:20px;
-    width: 70px;
+    width: 420px;
     margin:20px;
+    justify-content: center;
+    border:4px solid;
 }
-.imagen1{
+div.cards-rentals.h2{
   grid-column-start: 1;
-  grid-column-end: 1;
-  grid-row-start: 2;
-  grid-row-end: 2;
-  width: 80px;
+  grid-column-end:3;
+  
+}
+div.cards-rentals.imagen1{
+   position: absolute;
+   top:10px;
+
 }
 /* Tarjetas-fin*/
+/*form*/
+form input.submitBtn {
+  border:none;
+  background-color: #3e8914;
+  color:white;
+  border-radius: 1rem;
+  padding: .75rem 1.5rem;
+  margin:0 0 2rem 2%;
+  width: 96%;
+  max-width: 20rem;
+}
+
+form label.top input:required {
+  border-left: #3e8914 6px;
+}
+
+form label.top input:required:valid {
+  border-left:green solid 6px;
+}
+/*fin form*/
+
+/*inicio footer*/
+.gridfooter { 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px,1fr));
+  background-color: #3e8914;
+  padding:20px;
+  }
+
+  /*fin footer*/
