--- a/scootsSite/css/small.css
+++ b/scootsSite/css/small.css
@@ -245,3 +245,17 @@ form label.top input:required:valid {
   color:#eee;
 }
 /*end vehiculos renta*/
+.tablebox{
+  display:grid;
+  font-size: 1.0em;
+  grid-template-columns: 1fr;
+  border: 1px solid #3da35d;
+  border-radius: 10px;
+  box-shadow: 0 0 30px #111;
+  padding:20px;
+  padding-bottom: 40px;
+  margin: 20px;
+  font-family: 'Arima Madurai', cursive;
+  background-color:#3da35d;
+  color:#eee;
+}
