--- a/scootsSite/css/small.css
+++ b/scootsSite/css/small.css
@@ -102,17 +102,20 @@ main {max-width:950px;
     position: relative;}
 
   h1, h2, p {margin: 0;}
-  
+ 
+ 
   .weatherSummary {
-      position: absolute;
-      top: 25px;
-      left: 60px;
-      background: radial-gradient(#eee, #3da35d);
-      border: 1px solid #000;
-      padding: 1.5rem;
-      box-shadow: 0 0 30px #111;
-      opacity: .8;
-  }
+    position: relative;
+    left: 70px;
+    background: radial-gradient(#eee, #4567aa);   
+    padding: 1.5rem;
+    box-shadow: 0 0 30px #111;
+    opacity: .8;
+    width: 70%;
+    align-content: center;
+}
+  
+  
   .imagenprincipal{
       display:flex;
       justify-content: center;
@@ -269,13 +272,169 @@ form label.top input:required:valid {
 }
 
 
+
 tbody tr:nth-child(odd) {
   background-color: #96e072;
   text-align:center;
+  
 }
 
 tbody tr:nth-child(even) {
   background-color: #e8fccf;
   text-align:center;
+  
 }
+
+th {
+  font-size: 0.7em;
+}
+
+
 /*fin formato tabla*/
+
+ /*inicio galeria de imagenes rentals*/
+.gale img { 
+  width: 50px; 
+  height: auto; 
+  margin: .5rem;
+  filter: blur(0em);
+  transition: filter 0.5s;
+  background-color: #fff;
+  border:1px solid #333;
+}
+figcaption {
+  font-size: smaller;
+  font-family:"Electrolize";
+  
+}
+
+/* hover effect */
+.norm:hover {
+  box-shadow: 0 0 50px #333;
+}
+
+   
+.gale img[data-src] {
+  filter: blur(0.2em);
+}
+/*fin galeria de imagenes rentals*/
+
+
+/*----------- FORM --------------*/
+form fieldset{
+  margin: 2rem 0;
+  border: 1px solid #134611;
+  border-radius: 10px;
+  padding: .5rem 1%;
+}
+form legend{
+  color: #000;
+  margin:0 1rem;
+  padding:0 .5rem;
+}
+
+form label.top, form div { 
+  display: block;
+  padding-top: 1rem;
+  color: #000;
+  font-size: 1rem;
+}
+
+form label.top input, form label.top select{
+  -webkit-appearance: none;
+  display: block;
+  font-size: 1rem;
+  border:solid 1px rgb(24, 23, 23);
+  border-radius:4px;
+  padding: .75rem;
+  color: #000;
+  width: 100%;
+  max-width: 20rem;
+  background-color: rgba(0,0,0,0.1);
+}
+
+form label.sbs {
+  display:block;
+  padding: .75rem 0;
+  color: rgb(39, 38, 38);
+}
+
+form input.submitBtn {
+  border:none;
+  background-color: #134611;
+  color:white;
+  border-radius: 1rem;
+  padding: .75rem 1.5rem;
+  margin:0 0 2rem 2%;
+  width: 96%;
+  max-width: 20rem;
+}
+
+form label.top input:required {
+  border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+  border-left:green solid 6px;
+}
+
+.flexly {
+display: flex;
+align-items: center;
+}
+
+
+textarea {
+  padding: 1rem;
+  color: rgb(19, 18, 18);
+  width: 100%;
+  max-width: 25rem;
+  border:1.5px solid;
+  background-color: rgba(0,0,0,0.1);
+}
+
+.formbox{
+  display:flex;
+  width:450px;
+  font-size: 1.5em;
+  border: 1px solid #3da35d;
+  border-radius: 10px;
+  box-shadow: 0 0 30px #111;
+  padding:20px;
+  padding-bottom: 40px;
+  margin: 20px;
+  font-family: 'Arima Madurai', cursive;
+  background-color:#3da35d;
+  color:#eee;
+}
+/*----------- END FORM --------------*/
+
+.toursbox{
+  display:grid;
+  font-size: 1.0em;
+  grid-template-columns: 1fr;
+  border: 1px solid #3da35d;
+  border-radius: 10px;
+  box-shadow: 0 0 30px #111;
+  padding:20px;
+  padding-bottom: 40px;
+  margin: 20px;
+  font-family: 'Arima Madurai', cursive;
+  background-color:#3da35d;
+  color:#eee;
+ 
+}
+
+.google-maps {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+.google-maps iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
